--- a/portfolio-webpage/src/components/CodeEditorPortal.css
+++ b/portfolio-webpage/src/components/CodeEditorPortal.css
@@ -17,7 +17,7 @@
   color: #010c05;
   height: auto;
   max-width: 98%;
-  margin: 0 0 10px 0;
+  margin: 0 15px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -278,6 +278,12 @@
   scrollbar-width: thin;
   scrollbar-color: rgba(255,1,1,0.35) rgba(189,189,189,0.15);
   border-radius: 24px;
+}
+@media (max-width: 1900px) {
+
+  .editor-header {
+    margin-top: -50px !important;
+  }
 }
 
 
